Improve responsiveness on small screen, Fix text position and styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,6 +3,10 @@ html {
     width: 100%;
     font-size: 62.5%;
   }
+  * {
+    outline: 1px solid red;
+    box-sizing: border-box;
+  }  
 body {
     font-family: 'Lucida Console', 'Open Sans', sans-serif;
     font-size: 2rem;
@@ -19,11 +23,6 @@ img {
 .text-color-white {
   color:#ffffff;
 }
-
-section {
-    color:#ffffff;
-    
-  }
 
   /* navbar */
 header {
@@ -97,7 +96,152 @@ nav {
 
 }
 
-@media (max-width: 40rem) {
+
+
+/* hero image */
+
+.hero-image {
+    height: 95rem;
+    width: 100%; 
+    background: #444444;
+    background-image: url("../img/hero1.jpg"); 
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;    
+    padding: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;    
+}
+
+.hero-text {
+  font-size: 4.5rem;
+  font-weight: 800;
+  text-transform: uppercase;
+  color:#5dd3d3;
+  max-width: 90%; 
+  font-family:'Lucida Console';
+}
+
+
+/* Home text and image */
+
+.home-text {
+  width: 90%;
+  font-family: 'Lucida Console', monospace;
+  text-align: justify;
+  display: flex;  
+  padding: 1rem;
+  margin: 1.5rem;
+  font-size: 1.5rem;
+}
+.home-img {
+  width: 65rem;
+  margin: 1.5rem;
+  display: flex;   
+
+}
+.home-div {
+  display: flex; 
+  margin: 1.5rem; 
+
+}
+
+
+/* Tips section */ 
+
+.text-position {
+  margin: 3rem 2rem;
+  padding: 1rem 3rem; 
+  width: 90%; 
+  display: flex;
+  flex-direction: column;
+  
+}
+
+
+
+/* gallery */
+
+.hero-image-gallery {
+  height: 95rem;
+  width: 100%; 
+  background: #444444;
+  background-image: url("../img/hero2.png"); 
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;    
+  padding: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  
+}
+
+.gallery {
+  margin: 3rem 1rem;   
+  display: inline;    
+}
+
+.box-shadow {
+  box-shadow: rgba(136, 12, 136, 0.35) 0px 5px 15px;
+  width: 500px;
+  margin: 10px 10px;
+}
+img.box-shadow:hover {
+  box-shadow: rgba(136, 12, 136, 0.35) 10px 15px 25px;  
+
+}
+/* Download section */
+
+.download-div {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;   
+  max-width: 100%;
+  margin: 3rem 0;
+}
+.download-recommended {
+  max-width: 100%;
+  padding: 3rem 1rem;
+  display: flex;
+  flex-direction: column;
+}
+.download-recommended h3 {
+  word-break: break-all;
+}
+.download-box {
+  max-width: 100%;
+  height: 4rem;
+  padding: 3rem 1rem;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #47476b;
+  border-radius: 50%;
+  justify-content: center;
+}
+
+/* footer */
+
+
+#footer {
+  background: #0b060e;
+  height: 10rem;
+  width: 100%;
+  font-family: 'Lucida Console';
+  color: #ffffff;
+  padding: 2rem;
+  text-align:center;
+  margin: 0;
+     
+ }
+ #footer a {
+  text-decoration: none;
+ }
+
+ /* media */
+
+ @media (max-width: 40rem) {
   .menu-button {
     display: flex;
    }  
@@ -129,142 +273,9 @@ nav {
    }
 }
 
-/* hero image */
-
-.hero-image {
-    height: 95rem;
-    width: 100%;
-    background: #444444;
-    background-image: url("../img/hero1.jpg"); 
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;    
-    padding: 2rem;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-.hero-text {
-  font-size: 4.5rem;
-  font-weight: 800;
-  text-transform: uppercase;
-  color:#5dd3d3;
-  max-width: 90%; 
-  font-family:'Lucida Console';
-}
-
-
-/* Home text and image */
-
-.home-text {
-  max-width: 100%;
-  font-family: 'Lucida Console', monospace;
-  text-align: justify;
-  display: flex;  
-  padding: 1rem;
-  margin: 1.5rem;
-  font-size: 1.5rem;
-}
-.home-img {
-  width: 50rem;
-  margin: 1.5rem;
-  display: flex;   
-
-}
-.home-div {
-  display: flex; 
-  margin: 1.5rem; 
-
-}
-@media (max-width: 1100px) {
+@media (max-width: 1200px) {
   .home-text {
-    flex-direction: column;
+    flex-direction: column;   
 
   }
 }
-
-/* Tips section */ 
-
-.text-position {
-  margin: 3rem 2rem;
-  padding: 1rem 3rem;
-  width: ;
-  
-}
-
-
-
-/* gallery */
-
-.hero-image-gallery {
-  height: 90rem;
-  width: 100%;
-  background: #444444;
-  background-image: url("../img/hero2.png"); 
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: center;    
-  padding: 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.gallery {
-  margin: 3rem 1rem;    
-  width: 40vw;
-  display: inline;    
-}
-
-.box-shadow {
-  box-shadow: rgba(136, 12, 136, 0.35) 0px 5px 15px;
-  width: 500px;
-  margin: 10px 10px;
-}
-img.box-shadow:hover {
-  box-shadow: rgba(136, 12, 136, 0.35) 10px 15px 25px;  
-
-}
-/* Download section */
-
-.download-div {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around; 
-  max-width: 90%;
-  margin: 3rem 0;
-}
-.download-recommended {
-  max-width: 30%;
-  padding: 3rem 1rem;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #47476b;
-}
-.download-box {
-  max-width: 30%;
-  height: 4rem;
-  padding: 3rem 1rem;
-  display: flex;
-  flex-direction: column;
-  border: 1px solid #47476b;
-  justify-content: center;
-}
-
-/* footer */
-
-
-#footer {
-  background: #0b060e;
-  height: 10rem;
-  width: 100%;
-  font-family: 'Lucida Console';
-  color: #ffffff;
-  padding: 2rem;
-  text-align:center;
-     
- }
- #footer a {
-  text-decoration: none;
- }
